openspec/changes/archive/2026-04-21-no-std-aspen-core/evidence/ui-app-registry-no-std.stderr
Evidence-ID: no-std-aspen-core.ui-app-registry-no-std
Task-ID: 5.16
Artifact-Type: stderr-snapshot
Covers: core.no-std-core-baseline, architecture.modularity.feature-bundles-are-explicit-and-bounded

error[E0432]: unresolved import `aspen_core::AppRegistry`
  --> src/main.rs:1:5
   |
 1 | use aspen_core::AppRegistry;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ no `AppRegistry` in the root
   |
note: found an item that was configured out
  --> $REPO_ROOT/crates/aspen-core/src/lib.rs:93:23
   |
92 | #[cfg(feature = "std")]
   |       --------------- the item is gated behind the `std` feature
93 | pub use app_registry::AppRegistry;
   |                       ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `ui-app-registry-no-std` (bin "ui-app-registry-no-std") due to 1 previous error
